# post2-lite

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  aero_table_full.csv  aero_table_stage1_only.csv  aero_table_stage2.csv  aero_table_stage2_only.csv  aero_table_stage3.csv  asds_optimized_trajectory.csv  asds_threshold_probe.csv
.claude/: settings.local.json
assets/gui/: README.md
cases/: aero_table_full.csv  aero_table_stage1.csv  aero_table_stage2.csv  aero_table_stage2_only.csv  aero_table_stage3.csv  falcon9_ground_hold.case.json  ksp_falcon9.json  ksp_falcon9_asds_max_payload.json  ksp_falcon9_asds_max_payload_optimized.json  ksp_falcon9_asds_min_maxq.json  ksp_falcon9_asds_min_maxq_optimized.json  ksp_falcon9_max_payload.json  ksp_falcon9_max_payload_optimized.json  ksp_falcon9_max_payload_tangent.json  ksp_falcon9_max_payload_tangent_optimized.json  ksp_falcon9_min_maxq.json  ksp_falcon9_min_maxq_optimized.json  vehicle_launchsite.json
gfold2d/: CMakeLists.txt  README.md  plot.py  plot_tf.py
gfold2d/src/: gfold2d.cpp
gridfin_test/: CMakeLists.txt  README.md  aero_glide_mpc.cpp  aero_glide_mpc.hpp  aero_table_booster.csv  fin_mpc.cpp  fin_mpc.hpp  glide_math.hpp  main.cpp
include/post2/aero/: aero_model.hpp  aero_table.hpp
include/post2/core/: aero_table_build.hpp  case_config_io.hpp  control_models.hpp  coordinates.hpp  finite_difference.hpp  frames.hpp  gfold_solver.hpp  io.hpp  json.hpp  ksp_vehicle_site_import.hpp  nlp_evaluator.hpp  nlp_problem.hpp  optimization.hpp  optimizer.hpp  projection.hpp  qp_solver.hpp  reentry_solver.hpp  simulation_driver.hpp  state_log.hpp  trajectory_service.hpp  types.hpp  upfg.hpp
include/post2/environment/: atmosphere.hpp
include/post2/integrators/: dopri5.hpp  integrator.hpp  ode_integrator.hpp
include/post2/player/: guidance_script.hpp
include/post2/propagation/: builtin_events.hpp  engine_performance.hpp  force_model.hpp  force_model_set.hpp  force_models.hpp  vehicle_consumption.hpp
include/post2/vehicle/: runtime_state.hpp  vehicle.hpp  vehicle_config_io.hpp
scripts/: build_tangent_case.py  falcon9_max_payload.guidance.csv  falcon9_min_maxq.guidance.csv  meco_orbit_sweep.py  post2_export_vehicle_site.ks  post2_fly_openloop.ks  reformulate_max_payload.py  try_target_solve.py
src/aero/: aero_model.cpp  aero_table.cpp
src/core/: aero_table_build.cpp  case_config_io.cpp  control_models.cpp  coordinates.cpp  finite_difference.cpp  frames.cpp  gfold_solver.cpp  io.cpp  json.cpp  ksp_vehicle_site_import.cpp  nlp_evaluator.cpp  nlp_problem.cpp  optimization.cpp  optimizer.cpp  projection.cpp  qp_solver.cpp  reentry_solver.cpp  remote_service.cpp  simulation_driver.cpp  state_log.cpp  trajectory_service.cpp  upfg.cpp
src/environment/: atmosphere.cpp
src/gui/: chart_panel.cpp  chart_panel.hpp  main_win32.cpp  opengl_scene_renderer.cpp  opengl_scene_renderer.hpp  resource.h  resources.rc.in  software_renderer_3d.cpp  software_renderer_3d.hpp
src/integrators/: dopri5.cpp  ode_integrator.cpp
src/player/: guidance_script.cpp  main.cpp
src/propagation/: builtin_events.cpp  engine_performance.cpp  force_model.cpp  force_model_set.cpp  force_models.cpp  vehicle_consumption.cpp
src/server/: main.cpp
src/shell/: main.cpp
src/tools/: regen_aero.cpp
src/vehicle/: runtime_state.cpp  vehicle.cpp  vehicle_config_io.cpp
tests/: aero_model_test.cpp  aero_stage_table_test.cpp  dynamics_dof_test.cpp  engine_performance_test.cpp  engine_selection_test.cpp  frames_test.cpp  gfold_solver_test.cpp  guidance_script_test.cpp  integrator_test.cpp  ksp_vehicle_site_import_test.cpp  optimization_components_test.cpp  phase_termination_and_events_test.cpp  reentry_solver_test.cpp  smoke_test.cpp  upfg_guidance_test.cpp
tests/fixtures/: ksp_vehicle_site_v1_wrapped.json
